# The-Red-Sidewalk

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  redsidewalk_dump.sql  requirements.txt
.github/workflows/: cicd.yml
app/: app.py
backend/: .env  Dockerfile  __init__.py  app.py  config.py  database.py  main.py  requirements.txt
backend/routers/: accounts.py  badges.py  content_flags.py  discuss.py  filters.py  friends.py  lore.py  profile.py  ratings.py  report.py  sightings.py  users.py
backend/services/: accounts.py  avg_creature_info.py  content_flags.py  filters.py  sighting_detail.py  sighting_insert.py  sightings.py  users.py
backend/tests/: test_get_sighting_detail.py
backend/utils/: file_utils.py  static_files.py
cryptid-sightings/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
cryptid-sightings/app/: layout.tsx  page.tsx
cryptid-sightings/components/: GuestReportRestrictionModal.tsx  LoginModal.tsx  LoginPage.tsx  SignUpPage.tsx  auth-provider.tsx  client-layout.tsx  creature-icons.tsx  filter-form-modal.tsx  filter-map-component.tsx  filter-map-components.tsx  flag-modal.tsx  forgot-password.tsx  map-background.tsx  map-wrapper.tsx  new-map-component.tsx  report-form-modal.tsx  (+4 more)
db/: 00_redsidewalk_dump.sql  01_create_schemas.sql  02_agg_schema.sql  02_init_triggers.sql  03_seed_data.sql  04_full_seed_data.sql  agg_schema.sql  info_schema.sql  profile_schema.sql  rankings_schema.sql  redsidewalk_dump.sql  social_schema.sql
(+30 files in other folders)
